--- a/_sass/colors/typography-light.scss
+++ b/_sass/colors/typography-light.scss
@@ -40,7 +40,7 @@
   /* Sidebar */
   --site-title-color: black;
   --site-subtitle-color: #717171;
-  --sidebar-bg: rgba(0,0,0,0.1);;
+  --sidebar-bg: #EAEAEA;
   --sidebar-border-color: #efefef;
   --sidebar-muted-color: #545454;
   --sidebar-active-color: black;
@@ -50,7 +50,7 @@
   --avatar-border-color: white;
 
   /* Topbar */
-  --topbar-bg: rgba(0,0,0,0.1);
+  --topbar-bg: #EAEAEA;
   --topbar-text-color: rgb(78, 78, 78);
   --search-border-color: rgb(240, 240, 240);
   --search-icon-color: #c2c6cc;
@@ -65,7 +65,7 @@
   --toc-highlight: #0550ae;
   --btn-share-color: gray;
   --btn-share-hover-color: #0d6efd;
-  --card-bg: rgba(0,0,0,0.1);
+  --card-bg: #f5f5f5;
   --card-hovor-bg: rgba(0,0,0,0.2);
   --card-shadow: rgb(0,0,0,0.4) 0 2px 6px 0,
     rgba(0,0,0,0.3) 0 0 0 1px;
